[gd_scene load_steps=14 format=2]

[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://sprites/floor.png" type="Texture" id=2]
[ext_resource path="res://sprites/background.png" type="Texture" id=3]
[ext_resource path="res://scripts/ParallaxBackground.gd" type="Script" id=4]
[ext_resource path="res://sprites/ground.png" type="Texture" id=5]
[ext_resource path="res://scripts/SpawnTimer.gd" type="Script" id=6]
[ext_resource path="res://theme.tres" type="Theme" id=7]
[ext_resource path="res://scripts/Score.gd" type="Script" id=8]
[ext_resource path="res://scenes/GameOverMenu.tscn" type="PackedScene" id=9]
[ext_resource path="res://scripts/RunGame.gd" type="Script" id=10]
[ext_resource path="res://exports/web_export.apple-touch-icon.png" type="Texture" id=11]

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 8, 8, 0, 8, 0, 0, 8, 0 )

[sub_resource type="TileSet" id=1]
0/name = "floor.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 8, 8 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "floor.png 1"
1/texture = ExtResource( 2 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 8, 8 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 2 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0

[node name="RunGame" type="Node"]
script = ExtResource( 10 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 8, 35 )
jump_height = 40.0

[node name="TileMap" type="TileMap" parent="."]
visible = false
tile_set = SubResource( 1 )
cell_size = Vector2( 8, 8 )
cell_quadrant_size = 8
show_collision = true
format = 1
tile_data = PoolIntArray( 327680, 1, 0, 327681, 1, 0, 327682, 1, 0, 327683, 1, 0, 327684, 1, 0, 327685, 1, 0, 327686, 1, 0, 327687, 1, 0, 327688, 1, 0, 327689, 1, 0, 327690, 1, 0 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = ExtResource( 4 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 84, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Background" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 42, 24 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Ground" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 42, 44 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Node2D" type="Node2D" parent="."]

[node name="Control" type="Control" parent="Node2D"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Score" type="Label" parent="Node2D/Control"]
margin_right = 84.0
margin_bottom = 23.0
theme = ExtResource( 7 )
text = "0"
align = 2
autowrap = true
script = ExtResource( 8 )

[node name="ScoreTimer" type="Timer" parent="Node2D/Control/Score"]
autostart = true

[node name="GameOverMenu" parent="." instance=ExtResource( 9 )]

[node name="SpawnTimer" type="Timer" parent="."]
autostart = true
script = ExtResource( 6 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 84, 35 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 5, 14 )
scale = Vector2( 0.05, 0.0333333 )
texture = ExtResource( 11 )

[node name="Sprite2" type="Sprite" parent="."]
visible = false
position = Vector2( 5, 25 )
scale = Vector2( 0.05, 0.0333333 )
texture = ExtResource( 11 )

[connection signal="hit" from="Player" to="." method="_on_Player_hit"]
[connection signal="timeout" from="Node2D/Control/Score/ScoreTimer" to="Node2D/Control/Score" method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
